# duffelbag

./: .env.example  .pre-commit-config.yaml  README.md  piccolo_conf.py  pyproject.toml
.github/workflows/: lint.yml
database/: __init__.py  piccolo_app.py  populate.py  utils.py
database/models/: __init__.py  auth.py  character.py  static.py  user.py
database/piccolo_migrations/: database_2023_05_30t11_45_24_800756.py  database_2023_05_30t11_46_33_912947.py  database_2023_05_30t16_05_11_044470.py  database_2023_05_30t21_57_00_876136.py  database_2023_05_31t10_47_00_954167.py  database_2023_05_31t21_58_31_007199.py  database_2023_06_04t23_38_53_562274.py  database_2023_09_13t23_00_05_385246.py  database_2023_09_17t21_28_57_160325.py  database_2023_09_27t22_50_18_329649.py  database_2023_09_29t00_14_16_109454.py  database_2023_11_22t01_20_28_277671.py  database_2023_11_23t16_29_36_912882.py  database_2023_11_23t16_29_52_961165.py  database_2023_11_23t18_54_58_297239.py  database_2023_11_23t20_25_10_694640.py  database_2023_11_23t20_28_15_648236.py  database_2023_11_23t20_29_04_360182.py  database_2023_11_23t20_35_19_406775.py  database_2023_11_28t00_45_34_600108.py  database_2023_11_28t00_45_47_285429.py  database_2023_11_28t00_45_56_193577.py  database_2023_11_28t00_46_40_909957.py  database_2023_11_28t00_47_23_339486.py  database_2023_11_28t00_48_19_752344.py  database_2023_11_28t17_00_29_354896.py  database_2023_11_29t00_47_33_546439.py  database_2024_11_26t11_21_14_334996.py
database/temp_old_migrations/: database_2023_11_22t01_20_33_341719.py
duffelbag/: __main__.py  async_utils.py  auth.py  exceptions.py  localisation.py  log.py  shared.py  user_data.py
duffelbag/discord/: __init__.py  __main__.py  bot.py  component_base.py  components.py  config.py  localisation.py  manager.py
duffelbag/discord/exts/: auth.py  eval.py  expand_button.py
duffelbag/eludris/: __init__.py
localisation/: en_GB.json
raw_data/: __init__.py  parse.py
raw_data/models/: __init__.py  character.py  item.py  skill.py  tag.py
scripts/: __init__.py  repopulate.py
src/duffelbag/: __init__.py  auth.py  localisation.py  log.py  user_data.py
src/duffelbag/discord/: __init__.py  __main__.py  autocomplete.py  component_base.py  config.py  localisation.py  manager.py
src/duffelbag/discord/exts/: __init__.py  auth.py  eval.py  expand_button.py  user.py
src/duffelbag/eludris/: __main__.py
