[tool.poetry]
name = "duffelbag"
version = "0.1.0"
description = ""
authors = ["Chromosomologist <chromosomologist@gmail.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^0.21.0"
arkprts = {git = "https://github.com/thesadru/arkprts"}
piccolo = {extras = ["postgres"], version = "^0.113.0"}
argon2-cffi = "^21.3.0"
colorlog = "^6.7.0"
coloredlogs = "^15.0.1"


[tool.poetry.group.dev.dependencies]
devtools = "^0.11.0"
ruff = "^0.0.270"
pre-commit = "^3.3.2"
pyright = "^1.1.310"


[tool.poetry.group.discord.dependencies]
disnake = "^2.8.1"
disnake-ext-plugins = {git = "https://github.com/DisnakeCommunity/disnake-ext-plugins"}
disnake-ext-components = {git = "https://github.com/DisnakeCommunity/disnake-ext-components", rev = "rewrite"}


[tool.poetry.group.speedups.dependencies]
uvloop = "^0.17.0"
orjson = "^3.8.14"


[tool.poetry.scripts]
"repopulate" = "scripts.repopulate:_sync_main"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pyright]
exclude = [
    "**/node_modules",
    "**/__pycache__",
    "**/.*",
    "database/piccolo_migrations",
    ".venv",
]
reportMissingTypeStubs=false


[tool.black]
line-length = 100
extend-exclude = ".*database/piccolo_migrations.*"


[tool.ruff]
line-length = 100
extend-exclude = [
    "database/piccolo_migrations",
]

select = [
    "E",
    "F",
    "W",
    "I",
    "D",
    "UP",
    "YTT",
    "ANN",
    "S",
    "BLE",
    "FBT",
    "B",
    "C40",
    "DTZ",
    "T10",
    "EM",
    "ISC",
    "G",
    "PIE",
    "T20",
    "Q",
    "RSE",
    "RET",
    "SIM",
    "TCH",
    "ARG",
    "PGH",
    "PLC",
    "PLE",
    "PLR",
    "PLW",
    "TRY",
    "RUF",
]
# F403, F405 do not need to hate wildcard imports. Pyright can find undefined errors.
# D105, not really any point in documenting magic methods.
# D107, class docstr is in the class level, may change in future.
# D203 and D211, D212 and D213 intentionally clash
# ANN101, ANN102 ask for `self` and `cls` annotations, what?
# RET505-RET508 does not allow for any branches where it is an elif and else after a return
# PLC0414 doesn't support `import foo as foo` to reexport.
# S101 doesn't allow assertions.
ignore = [
    "F403",
    "F405",
    "D105",
    "D107",
    "D203",
    "D213",
    "ANN101",
    "ANN102",
    "RET505",
    "RET506",
    "RET507",
    "RET508",
    "PLC0414",
    "S101",
]

unfixable = ["RET502", "RET503"]

[tool.ruff.per-file-ignores]
# T201: Allow printing in scripts.
"scripts/*" = [
    "T201",
]
